sumo/tests/marouter/errors/false_options/missing_output/errors.marouter
Error: No output file given.
Quitting (on error).
